# print_table_in_Db

./: .gitignore  Cargo.toml  Persons.db  README.md
src/: main.rs
